--- a/Podvibe admin/src/views/audios/index.pug
+++ b/Podvibe admin/src/views/audios/index.pug
@@ -27,7 +27,7 @@ block content
               td(class='p-4')
                 img(src=audio.image alt=audio.name class='w-20 h-20 object-cover rounded-lg')
               td(class='p-4')= audio.name
-              td(class='p-4')= audio.performer
+              td(class='p-4 whitespace-nowrap')= audio.performer
               td(class='p-4')= audio.desc
               td(class='p-4')= audio.duration
               td(class='p-4 flex mt-2')
