--- a/Podvibe admin/src/views/users/create.pug
+++ b/Podvibe admin/src/views/users/create.pug
@@ -6,7 +6,7 @@ block content
         |Create New User
             
       //- enctype='multipart/form-data -> tells it to accept data type images
-      form( method='post' enctype='multipart/form-data')
+      form(action='/users/create', method='post')
         //- userName
         div(class='mb-4')
           label(for='name' class='block text-gray-700 font-bold mb-2') Name
@@ -14,33 +14,44 @@ block content
 
         //- email
         div(class='mb-4')
-          label(for='name' class='block text-gray-700 font-bold mb-2') Name
-          input(type='text', id='name', name='name', required, class='w-full p-2 border border-gray-300 rounded')
+          label(for='email' class='block text-gray-700 font-bold mb-2') E-mail
+          input(type='text', id='email', name='email', required, class='w-full p-2 border border-gray-300 rounded')
 
         //- password
         div(class='mb-4')
-          label(for='name' class='block text-gray-700 font-bold mb-2') Name
-          input(type='text', id='name', name='name', required, class='w-full p-2 border border-gray-300 rounded')
+          label(for='password' class='block text-gray-700 font-bold mb-2') Password
+          input(type='text', id='password', name='password', required, class='w-full p-2 border border-gray-300 rounded')
 
         //- gender
         div(class='mb-4')
-          label(for='performer' class='block text-gray-700 font-bold mb-2') Performer
-          input(type='text', id='performer', name='performer', required, class='w-full p-2 border border-gray-300 rounded')
-        
-        //- Description
-        div(class='mb-4')
-          label(for='desc' class='block text-gray-700 font-bold mb-2') Description
-          textarea(id='desc', name='desc', rows='2', required, class='w-full p-2 border border-gray-300 rounded') 
+          label(for='gender' class='block text-gray-700 font-bold mb-2') Gender
+          select(id='gender', name='gender', required, class='w-full p-2 border border-gray-300 rounded')
+            option(value='') Select Gender
+            option(value='male') Male
+            option(value='female') Female
+            option(value='other') Other
 
-        //- Audio img
+        //- date
         div(class='mb-4')
-          label(for='image' class='block text-gray-700 font-bold mb-2') Audio Image
-          input(type='file', id='image', name='image', accept='image/*', required, class='w-full p-2 border border-gray-300 rounded')
+          label(for='date' class='block text-gray-700 font-bold mb-2') Date
+          input(type='text', id='date', name='date', required, class='w-full p-2 border border-gray-300 rounded')
 
-        //- Audio file
+        //- month
         div(class='mb-4')
-          label(for='audio' class='block text-gray-700 font-bold mb-2') Audio File
-          input(type='file', id='audio', name='audio', accept='audio/*', required, class='w-full p-2 border border-gray-300 rounded')
+          label(for='month' class='block text-gray-700 font-bold mb-2') Month
+          input(type='text', id='month', name='month', required, class='w-full p-2 border border-gray-300 rounded')
+
+        //- year
+        div(class='mb-4')
+          label(for='year' class='block text-gray-700 font-bold mb-2') Year
+          input(type='text', id='year', name='year', required, class='w-full p-2 border border-gray-300 rounded')
+
+        //- isAdmin
+        div(class='mb-4')
+          label(for='isAdmin' class='block text-gray-700 font-bold mb-1') Role
+          select(id='isAdmin', name='isAdmin', required, class='w-full p-1 border border-gray-300 rounded')
+            option(value='false') User
+            option(value='true') Admin
 
         //- Submit Button
         div(class='flex justify-end')
